{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 17,
  "lineage": "1f8e87ec-e8a5-932f-72ad-61b506364017",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "r_elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00c2b836f2e764f20",
            "association_id": "eipassoc-0e39629d43604b17a",
            "domain": "vpc",
            "id": "eipalloc-00c2b836f2e764f20",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-04dfc650dad38c73e",
            "private_dns": "ip-10-0-0-132.ap-southeast-1.compute.internal",
            "private_ip": "10.0.0.132",
            "public_dns": "ec2-13-213-113-177.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.213.113.177",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "Environment": "Dev",
              "Identifier": "Terraform-Temporary",
              "Owner": "Ominda.Rathnasiri@dialog.lk",
              "Project": "C-OPS-Poc"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "r_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:352505165667:internet-gateway/igw-02ae2b4c4d6050f5e",
            "id": "igw-02ae2b4c4d6050f5e",
            "owner_id": "352505165667",
            "tags": {
              "Name": "C-OPS-Poc_Dev_igw"
            },
            "tags_all": {
              "Environment": "Dev",
              "Identifier": "Terraform-Temporary",
              "Name": "C-OPS-Poc_Dev_igw",
              "Owner": "Ominda.Rathnasiri@dialog.lk",
              "Project": "C-OPS-Poc"
            },
            "vpc_id": "vpc-0779e1048987703f8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.r_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "r_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00c2b836f2e764f20",
            "association_id": "eipassoc-0e39629d43604b17a",
            "connectivity_type": "public",
            "id": "nat-05c871aed6d7f5103",
            "network_interface_id": "eni-04dfc650dad38c73e",
            "private_ip": "10.0.0.132",
            "public_ip": "13.213.113.177",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d565cbee68354355",
            "tags": {
              "Name": "C-OPS-Poc_Dev_nat_gateway"
            },
            "tags_all": {
              "Environment": "Dev",
              "Identifier": "Terraform-Temporary",
              "Name": "C-OPS-Poc_Dev_nat_gateway",
              "Owner": "Ominda.Rathnasiri@dialog.lk",
              "Project": "C-OPS-Poc"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.r_elastic_ip",
            "module.vpc.aws_internet_gateway.r_internet_gateway",
            "module.vpc.aws_subnet.r_public_subnets",
            "module.vpc.aws_vpc.r_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "r_private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:352505165667:route-table/rtb-02f4428ef8266c4ea",
            "id": "rtb-02f4428ef8266c4ea",
            "owner_id": "352505165667",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-05c871aed6d7f5103",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "C-OPS-Poc_Dev_private_rbt"
            },
            "tags_all": {
              "Environment": "Dev",
              "Identifier": "Terraform-Temporary",
              "Name": "C-OPS-Poc_Dev_private_rbt",
              "Owner": "Ominda.Rathnasiri@dialog.lk",
              "Project": "C-OPS-Poc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0779e1048987703f8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.r_elastic_ip",
            "module.vpc.aws_internet_gateway.r_internet_gateway",
            "module.vpc.aws_nat_gateway.r_nat_gateway",
            "module.vpc.aws_subnet.r_public_subnets",
            "module.vpc.aws_vpc.r_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "r_public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:352505165667:route-table/rtb-0335457df67adffb0",
            "id": "rtb-0335457df67adffb0",
            "owner_id": "352505165667",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02ae2b4c4d6050f5e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "C-OPS-Poc_Dev_public_rbt"
            },
            "tags_all": {
              "Environment": "Dev",
              "Identifier": "Terraform-Temporary",
              "Name": "C-OPS-Poc_Dev_public_rbt",
              "Owner": "Ominda.Rathnasiri@dialog.lk",
              "Project": "C-OPS-Poc"
            },
            "timeouts": null,
            "vpc_id": "vpc-0779e1048987703f8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.r_internet_gateway",
            "module.vpc.aws_vpc.r_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "r_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:352505165667:subnet/subnet-0a5350a14175ff4c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a5350a14175ff4c3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "352505165667",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "C-OPS-Poc_Dev_PrivateSubnet-01"
            },
            "tags_all": {
              "Environment": "Dev",
              "Identifier": "Terraform-Temporary",
              "Name": "C-OPS-Poc_Dev_PrivateSubnet-01",
              "Owner": "Ominda.Rathnasiri@dialog.lk",
              "Project": "C-OPS-Poc"
            },
            "vpc_id": "vpc-0779e1048987703f8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.r_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:352505165667:subnet/subnet-07ba1c46cfd675c45",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07ba1c46cfd675c45",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "352505165667",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "C-OPS-Poc_Dev_PrivateSubnet-02"
            },
            "tags_all": {
              "Environment": "Dev",
              "Identifier": "Terraform-Temporary",
              "Name": "C-OPS-Poc_Dev_PrivateSubnet-02",
              "Owner": "Ominda.Rathnasiri@dialog.lk",
              "Project": "C-OPS-Poc"
            },
            "vpc_id": "vpc-0779e1048987703f8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.r_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "r_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:352505165667:subnet/subnet-0d565cbee68354355",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d565cbee68354355",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "352505165667",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "C-OPS-Poc_Dev_PublicSubnet-01"
            },
            "tags_all": {
              "Environment": "Dev",
              "Identifier": "Terraform-Temporary",
              "Name": "C-OPS-Poc_Dev_PublicSubnet-01",
              "Owner": "Ominda.Rathnasiri@dialog.lk",
              "Project": "C-OPS-Poc"
            },
            "vpc_id": "vpc-0779e1048987703f8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.r_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:352505165667:subnet/subnet-05fe0b6d980a58ae9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05fe0b6d980a58ae9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "352505165667",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "C-OPS-Poc_Dev_PublicSubnet-02"
            },
            "tags_all": {
              "Environment": "Dev",
              "Identifier": "Terraform-Temporary",
              "Name": "C-OPS-Poc_Dev_PublicSubnet-02",
              "Owner": "Ominda.Rathnasiri@dialog.lk",
              "Project": "C-OPS-Poc"
            },
            "vpc_id": "vpc-0779e1048987703f8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.r_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "r_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:352505165667:vpc/vpc-0779e1048987703f8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b423d04f21cde1ed",
            "default_route_table_id": "rtb-0d1ac0ce8218de69a",
            "default_security_group_id": "sg-0d4e586f0904f1235",
            "dhcp_options_id": "dopt-0a718c9cdf0ef570a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0779e1048987703f8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d1ac0ce8218de69a",
            "owner_id": "352505165667",
            "tags": {
              "Name": "C-OPS-Poc_Dev_vpc"
            },
            "tags_all": {
              "Environment": "Dev",
              "Identifier": "Terraform-Temporary",
              "Name": "C-OPS-Poc_Dev_vpc",
              "Owner": "Ominda.Rathnasiri@dialog.lk",
              "Project": "C-OPS-Poc"
            }
          }
        }
      ]
    }
  ]
}